--- a/ds1m-b/Paula-B/css/responsive.css
+++ b/ds1m-b/Paula-B/css/responsive.css
@@ -1,14 +1,23 @@
 /* TABLET */
 
-@media(max-width:960px) {
+@media (max-width: 960px) {
+    header {
+        display: flex;
+    }
+    .menu {
+        display: none;
+    }
+    #icon-half-menu {
+        display: block;
+    }
     .description-text {
         display: flex;
         flex-direction: column-reverse;
-        font-size: 3vw;
+        font-size: 4vw;
     }
     .description-title {
         display: grid;
-        font-size: 3vw;
+        font-size: 4vw;
     }
     .curiosidade_text {
         display: flex;
@@ -16,13 +25,16 @@
         width: 40%;
         margin-left: 30vw;
         gap: 30px;
-        font-size: 2.3vw;
+        font-size: 3.5vw;
+    }
+    .cuidado_title {
+        font-size: 2.5rem;
     }
     .cuidados_list {
-        font-size: 3vw;
+        font-size: 4vw;
     }
     .porque_title {
-        font-size: 3vw;
+        font-size: 4vw;
     }
     .text {
         font-size: 80%;
@@ -35,11 +47,18 @@
         margin-left: 4vw;
     }
     .mySlides-images img {
-        width: 65%;
+        width: 90%;
+    }
+    .racas-containeer {
+        margin-top: 30vw;
+    }
+    .racas-container {
+        margin-top: 10vw;
     }
     .outros {
         display: flex;
-        margin-top: 5vw;
+        margin-top: 30vw;
+        font-size: 10vw;
     }
     footer {
         font-size: 3vw;
@@ -49,17 +68,19 @@
 
 /* MOBILE  */
 
-@media(max-width:640px) {
-    .menu {
-        font-size: 5.5vw;
-        gap: 30px;
-    }
+@media (max-width: 640px) {
     .title_main {
         font-size: 8vw;
     }
     .curiosidade_text {
-        font-size: 3vw;
+        font-size: 3.3vw;
         gap: 15px;
+    }
+    .cuidados_list {
+        font-size: 1.7rem;
+    }
+    .cuidado_title {
+        font-size: 1.5rem;
     }
     .racas-container {
         display: flex;
@@ -67,11 +88,11 @@
         align-items: center;
         gap: 3vw;
     }
-    .raca {
-        height: 33vw;
-    }
     .racas-containeer {
         display: none;
+    }
+    .mySlides-images img {
+        width: 70%;
     }
     .name {
         display: none;
@@ -81,16 +102,15 @@
     }
     .outros {
         display: flex;
+        margin-top: 8vw;
+    }
+    .icon>img {
+        width: 60px;
+        height: 60px;
     }
 }
 
-@media(max-width:380px) {
-    header {
-        display: flex;
-    }
-    .menu {
-        display: none;
-    }
+@media (max-width: 380px) {
     .description-title {
         display: flex;
         width: 60vw;
@@ -104,13 +124,32 @@
         width: 40px;
         height: 40px;
     }
-    .cuidados_list {
-        margin-top: 2vw;
-        font-size: 1rem;
+    .racas-container {
+        gap: 10vw;
     }
-}
-
-.cuidado_title {
-    font-size: 1rem;
-    margin-top: 20px;
+    .outros {
+        display: flex;
+        margin-top: 5vw;
+        font-size: 10vw;
+    }
+    .cuidado_title {
+        font-size: 5vw;
+    }
+    .cuidados_list {
+        font-size: 5vw;
+    }
+    .curiosidade_text {
+        font-size: 4.5vw;
+        gap: 15px;
+    }
+    .mySlides-images img {
+        width: 60%;
+    }
+    .slideshow-container {
+        display: flex;
+        margin-left: 12vw;
+    }
+    .porque_title {
+        font-size: 5vw;
+    }
 }
