--- a/ds1m-b/Paula-B/css/style.css
+++ b/ds1m-b/Paula-B/css/style.css
@@ -1,7 +1,7 @@
 :root {
-    --primari-color: #F8E795;
-    --cinze-color: #E7E7E7;
-    --amareloEsc-color: #D2AC47;
+    --primari-color: #f8e795;
+    --cinze-color: #e7e7e7;
+    --amareloEsc-color: #d2ac47;
 }
 
 html {
@@ -10,7 +10,7 @@ html {
 
 body {
     grid-template-areas: "content";
-    background-color: #E7E7E7;
+    background-color: #e7e7e7;
     place-content: center;
 }
 
@@ -21,8 +21,12 @@ header {
     grid-template-columns: auto 1fr;
     justify-content: space-between;
     align-items: center;
-    background-color: #F8E795;
-    font-family: 'Updock', cursive;
+    background-color: #f8e795;
+    font-family: "Updock", cursive;
+}
+
+#icon-half-menu {
+    display: none;
 }
 
 main {
@@ -41,8 +45,8 @@ footer {
     display: grid;
     place-content: center;
     border-top: 2px solid #000;
-    background-color: #F8E795;
-    font-family: 'Patrick Hand', cursive;
+    background-color: #f8e795;
+    font-family: "Patrick Hand", cursive;
     font-size: 2rem;
 }
 
@@ -53,10 +57,10 @@ footer {
     display: grid;
     place-content: center;
     font-size: 7rem;
-    transition: all .5s;
+    transition: all 0.5s;
     color: black;
 }
 
 .voltar:hover {
-    color: #D2AC47;
+    color: #d2ac47;
 }
