--- a/ds1m-a/claramartins/css/celular.css
+++ b/ds1m-a/claramartins/css/celular.css
@@ -1,6 +1,13 @@
 @media (max-width:640px) {
     .logo{
-        align-items: flex-start;
+        display: flex;
+        align-self: flex-start;
+    }
+    .home{
+        background-image: url(../img/blackground1.png);
+        width: 640px;
+        height: 700px;
+        box-shadow: none;
     }
     .menu{
         display: none;
@@ -27,6 +34,46 @@
         flex-direction: column;
         padding-left: 32px;
     }
+    .description_jisoo{
+        background-image: url(../img/jisoo_cel.jpg);
+        height: 300px;
+        width: 640px;
+    }
+    .description_jennie{
+        background-image: url(../img/jen_cel.jpg);
+        height: 300px;
+        width: 640px;
+    }
+    .description_rose{
+        background-image: url(../img/rose_cel.jpg);
+        height: 300px;
+        width: 640px;
+    }
+    .description_lisa{
+        background-image: url(../img/lisa_cel.jpg);
+        height: 300px;
+        width: 640px;
+    }
+    .description_jisoo:hover{
+        background-image: url(../img/jisoo_cel.jpg);
+        height: 300px;
+        width: 640px;
+    }
+    .description_jennie:hover{
+        background-image: url(../img/jen_cel.jpg);
+        height: 300px;
+        width: 640px;
+    }
+    .description_rose:hover{
+        background-image: url(../img/rose_cel.jpg);
+        height: 300px;
+        width: 640px;
+    }
+    .description_lisa:hover{
+        background-image: url(../img/lisa_cel.jpg);
+        height: 300px;
+        width: 640px;
+    }
     .section_title{
         padding-left: 12px;
     }
@@ -42,13 +89,19 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        justify-content: flex-start;
+        justify-content: center;
+        padding-left: 200px;
+        padding-top: 12px;
+    }
+    .slider a{
+        padding-left: 100px;
     }
     .info_shows{
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        padding-left: 12px;
+        justify-content: center;
+        padding-left: 200px;
     }
     .billboard{
         font-size: 2.5rem;
@@ -79,6 +132,12 @@
         height: 10px;
         width: 10px;
     }
+    .slideshow-container {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        width: 100%;
+    }
     .linha-horizontal_2 {
         width: 10vh;
         border: 1px solid var(--pink-color);
@@ -88,6 +147,10 @@
         flex-direction: column;
         font-size: 1rem;
         align-self: flex-start;
+        
+    }
+    .icons_social a{
+        padding-left: 300px;
     }
     .social{
         align-self: flex-start;
@@ -95,14 +158,10 @@
     .vlive{
         height: 3vh;
     }
-    .social_links{
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        align-self: flex-start;
-    }
+    
     .copyright{
         padding-top: 64px;
         align-self: flex-start;
+        padding-left: 155px;
     }
 }
