--- a/ds1m-b/lucasvinicius/css/formas.css
+++ b/ds1m-b/lucasvinicius/css/formas.css
@@ -9,10 +9,12 @@
 }
 
 .quadrado {
+    width: 110px;
+    height: 25px;
+    border: 3px solid gray;
     background-color: gray;
-    width: 105px;    
+    text-align: center;
     color: black;
-    border-radius: 10%;
     display: none;
 }
 
@@ -24,10 +26,6 @@
     place-self: center;
 }
 
-.quadrado2 {
-    background-color: gray;
-    width: 105px;
-    color: black;
-    border-radius: 10%;
+#quadrado2 {
     display: none;
 }
