--- a/ds1t-a/lohannes/css/style.css
+++ b/ds1t-a/lohannes/css/style.css
@@ -44,17 +44,15 @@ main{
     overflow: hidden;
 }
 
-#atlok_Personagens{
-    width: 100%;
-}
-
-#elementos{
-    width: 100%;
-}
-
 footer{
-    height: 100px;
+    height: 50px;
     background-color: black;
+    border-top: 2px solid #fff;
+    font-family: 'Sarala', sans-serif;
+    display: grid;
+    place-items: center;
+    color: #fff;
+    font-size: 0.75rem;
 }
 
 @media (max-width:640px){
