--- a/ds1t-a/Luiz Gustavo/css/airpods.css
+++ b/ds1t-a/Luiz Gustavo/css/airpods.css
@@ -49,7 +49,7 @@
     gap: 15px;
 }
 
-.img-airpods-pro{
+.img-airpods-pro {
     width: 19vw;
     height: 29vh;
 }
@@ -58,7 +58,7 @@
     .section-airpods-watch {
         display: flex;
         flex-direction: column;
-        height: 180vh;
+        height: 160vh;
     }
     .div-title {
         height: 15vh;
@@ -70,24 +70,25 @@
         font-size: 1.5rem;
     }
     .airpods {
-        height: 70vh;
-        gap: 75px;
+        height: 60vh;
+        gap: 70px;
     }
-    .img-airpods-pro{
-        width: 30vw;
+    .img-airpods-pro {
+        width: 40vw;
     }
 }
 
 @media (max-width: 640px) {
     .section-airpods-watch {
-        height: 130vh;
+        height: 125vh;
     }
     .div-title {
-        font-size: 2.25rem;
-        height: 10vh;
+        font-size: 2.5rem;
+        height: auto;
     }
     .airpods {
-        gap: 30px;
+        height: 55vh;
+        gap: 20px;
     }
     .text-airpods {
         font-size: 0.875rem;
@@ -102,16 +103,20 @@
         font-size: 1rem;
         width: 80vw;
     }
-    .img-airpods-pro{
+    .img-airpods-pro {
         width: 50vw;
     }
 }
 
-@media (max-width: 375px){
-    .section-airpods-watch{
+@media (max-width: 375px) {
+    .section-airpods-watch {
         height: 160vh;
     }
-    .img-airpods-pro{
+    .airpods {
+        height: 75vh;
+    }
+    .img-airpods-pro {
         width: 80vw;
+        height: auto;
     }
 }
