--- a/ds1t-a/Luiz Gustavo/css/style.css
+++ b/ds1t-a/Luiz Gustavo/css/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+    position: relative;
+    overflow-x: hidden;
+}
+
 header {
     width: 100%;
     height: 13vh;
@@ -35,11 +41,11 @@ footer {
     }
 }
 
-@media (max-width: 375px){
-    header{
+@media (max-width: 375px) {
+    header {
         height: 10vh;
     }
-    footer{
+    footer {
         font-size: 0.75rem;
     }
 }
