--- a/ds1t-a/Luiz Gustavo/css/watch.css
+++ b/ds1t-a/Luiz Gustavo/css/watch.css
@@ -36,7 +36,7 @@
         height: 15vh;
     }
     .main-watch {
-        height: 80vh;
+        height: 70vh;
     }
     .watch {
         width: 523px;
@@ -45,6 +45,9 @@
 }
 
 @media (max-width: 640px) {
+    .main-watch {
+        height: 50vh;
+    }
     .div-title-wacth {
         font-size: 2.25rem;
         height: 10vh;
@@ -53,7 +56,13 @@
         font-size: 0.875rem;
         width: 80vw;
     }
-    .watch{
+    .watch {
         width: 80vw;
+    }
+}
+
+@media (max-width: 375px) {
+    .main-watch {
+        height: 100vh;
     }
 }
