imagem da sessão arrumada

--- a/ds1t-b/thiagoFreitas/css/unidades.css
+++ b/ds1t-b/thiagoFreitas/css/unidades.css
@@ -1,6 +1,6 @@
 .unidades{
     width: 100%;
-    background-image: url(/img/background4.png);
+    background-image: url(../img/background4.png);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
