--- a/ds1t-a/Alexssandro/css/cafes-variados.css
+++ b/ds1t-a/Alexssandro/css/cafes-variados.css
@@ -5,18 +5,21 @@
     align-items: center;
 }
 
-.titulo-cv {
+.titulo {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 48px;
     background-image: url(../img/CV-BG.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     height: 528px;
     width: 100%;
 }
 
-.titulo-cv p {
+.titulo p {
     font-size: 3rem;
     font-weight: 700;
     color: var(--cor-primaria);
