--- a/ds1t-b/andreLuiz/css/informacoes.css
+++ b/ds1t-b/andreLuiz/css/informacoes.css
@@ -87,18 +87,26 @@
     .section-informacoes{
         height: 120vh;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows:100px 1fr 1fr;
+    }
+
+    .informacoes-title-container{
+        grid-column: 1;
+        grid-row: 1;
     }
 
     .informacoes-criador-container{
         grid-column: 1;
-        grid-row: 1;
-        padding-top: 10vh;
+        grid-row: 2;
+        width: 40vw;
+        place-self: center;
     }
 
     .informacoes-contato-container{
         grid-column: 1;
-        grid-row: 2;
+        grid-row: 3;
+        width: 55vw;
+        place-self: center;
     }
 
     .informacoes-contato-container p{
@@ -109,10 +117,11 @@
 
 @media(max-width: 640px){
     .section-informacoes{
-        height: 120vh;
+        height: 100vh;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 100px 1fr 1fr;
+        place-items: center;
     }
 
     .informacoes-title-container{
@@ -129,6 +138,8 @@
     .informacoes-criador-container{
         grid-column: 1;
         grid-row: 2;
+        padding-top: 0;
+        width: 80vw;
     }
 
     .icons-container{
@@ -144,6 +155,8 @@
         grid-column: 1;
         grid-row: 3;
         gap: 16px;
+        width: 80vw;
+        align-self: center;
     }
 
     .informacoes-contato-container p{
@@ -154,5 +167,36 @@
     .informacoes-contato-container i{
         color: #000000;
         font-size: 2rem;
+    }
+}
+
+@media (max-width: 375px){
+    .section-informacoes{
+        height: 170vh;
+    }
+
+    .informacoes-title-container{
+        padding-left: 0;
+        height: 15vh;
+    }
+
+    .informacoes-title{
+        font-size: 3rem;
+        
+    }
+
+    .informacoes-criador-container{
+        place-self: center;
+        padding-top: 0;
+        width: 80vw;
+        height: 100vh;
+    }
+
+    .informacoes-contato-container{
+        width: 94.5vw;
+    }
+
+    .informacoes-contato-container p{
+        font-size: 1.5rem;
     }
 }
