--- a/ds1t-b/andreLuiz/css/menu.css
+++ b/ds1t-b/andreLuiz/css/menu.css
@@ -21,6 +21,7 @@ a{
         left: 0;
         right: 0;
         bottom: 0;
+        height: 100vh;
         align-items: center;
         justify-content: center;
         flex-direction: column;
@@ -33,6 +34,7 @@ a{
 
     .menu-burger-container.active ~ .menu{
         opacity: 1;
+        transform: translateX(0%);
     }
 
     .menu-burger-container{
@@ -76,3 +78,6 @@ a{
     }
 }
 
+@media (max-width: 375px){
+    
+}
