--- a/ds1t-b/andreLuiz/css/smartwatch.css
+++ b/ds1t-b/andreLuiz/css/smartwatch.css
@@ -85,9 +85,9 @@
 
 @media (max-width:960px){
     .section-smartwatch{
-        height: 140vh;
+        height: 120vh;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-rows:100px 1fr 1fr 1fr;
     }
 
     .section-smartwatch a{
@@ -95,10 +95,17 @@
         height: 76px;
     }
 
-    .smartwatch-text-container1{
-        grid-row: 1;
+    .smartwatch-title-container{
         grid-column: 1;
-        padding-top: 10vh;
+        grid-row: 1;
+        width: 16vw;
+        height: 7vh;
+    }
+
+    .smartwatch-text-container1{
+        grid-row: 2;
+        grid-column: 1;
+        width: 40vw;
     }
 
     .smartwatch-text-container1 p{
@@ -108,14 +115,15 @@
 
     .smartwatch-promotion-container{
         grid-column: 1;
-        grid-row: 2;
+        grid-row: 3;
+        width: 58vw;
+        place-self: center;
     }
 
     .smartwatch-text-container2{
         grid-column: 1;
-        grid-row: 3;
-        width: 403px;
-        height: 126px;
+        grid-row: 4;
+        width: 50vw;
     }
 
     .smartwatch-text-container2 p{
@@ -126,10 +134,10 @@
 
 @media (max-width: 640px){
     .section-smartwatch{
-        height: 140vh;
+        height: 110vh;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 120px 1fr 1fr 1fr;
+        grid-template-rows: 100px 1fr 1fr 1fr;
     }
 
     .smartwatch-title-container{
@@ -145,6 +153,8 @@
     .smartwatch-text-container1{
         grid-column: 1;
         grid-row: 2;
+        padding-top: 0;
+        width: 70vw;
     }
 
     .smartwatch-text-container1 p{
@@ -166,6 +176,8 @@
     .smartwatch-text-container2{
         grid-column: 1;
         grid-row: 4;
+        width: 70vw;
+        height: 10vh;
     }
 
     .smartwatch-text-container2 p {
@@ -174,11 +186,21 @@
     }
 }
 
-@media (max-width: 960px) {
+@media(max-width: 375px){
     .section-smartwatch{
-        width: 100%;
+        height: 130vh;
     }
-    .smartwatch-text{
-        font-size: 2rem;
+
+    .smartwatch-title-container{
+        height: 14vh;
+    }
+
+    .smartwatch-title{
+        font-size: 3rem;
+    }
+
+    .smartwatch-promotion-container img{
+        width: 80vw;
+        height: auto;
     }
 }
