--- a/ds1t-a/Caroline Portela/style.css
+++ b/ds1t-a/Caroline Portela/style.css
@@ -16,12 +16,6 @@
 main{
     grid-area: content;
 }
-.footer{
-    grid-area: content;
-    place-self: end start;
-   
-}
-
 
 section {
     height: 100%;
@@ -30,12 +24,15 @@ section .ofertas{
     height: 130vh;
 }
 footer{
+    grid-area: content;
+    place-self: end start;
     height: 50vh;
     width: 40vh;
     background-color: #000000;
     color: #e2b7b7; 
     width: 100%;
-    height: 100%;   
+    height: 100%;
+    font-family: 'Ubuntu', sans-serif;   
 
 }
 
