--- a/ds1t-a/Cauã Felipe/css/home.css
+++ b/ds1t-a/Cauã Felipe/css/home.css
@@ -1,7 +1,7 @@
 .home{
     height: 100vh;
     width: 100%;
-    background-image: url(./img/home.png);
+    background-image: url(./img/home2.png);
     background-repeat: no-repeat;
     background-size: cover;
     padding-left: 5%;
