update ajustes mobile

--- a/ds1t-b/one-page-x/css/descricao-filme.css
+++ b/ds1t-b/one-page-x/css/descricao-filme.css
@@ -130,7 +130,6 @@
         position: absolute;
         z-index: -100;
         opacity: 50%;
-
     }
     .nome-do-filme{
         display: none;
@@ -138,4 +137,15 @@
     .diretor{
         display: none;
     }
+
+    @media (max-width: 640px){
+        .img-pearl{
+            grid-area: pearl;
+            position: absolute;
+            overflow: hidden;
+            height: 180px;
+            width: 118px;
+        }  
+    }
+    
 }
