--- a/ds1t-b/one-page-x/css/home.css
+++ b/ds1t-b/one-page-x/css/home.css
@@ -57,3 +57,20 @@
         width: 35px;
 }
 }
+@media (max-width: 640px){
+    .home{
+        height: 35rem;
+    }
+    .home img{
+        max-width: 100%;
+        max-height: 100%;
+        height: 200px;
+        width: 350px;
+    }
+    .setas img{
+        max-width: 100%;
+        max-height: 100%;
+        height: 80px;
+        width: 35px;
+}
+}
