--- a/ds1m-b/monica/css/menu.css
+++ b/ds1m-b/monica/css/menu.css
@@ -3,3 +3,12 @@
     gap: 48px;
     font-size: 1.75rem;
 }
+
+.menu li {
+    border-bottom: 4px solid transparent;
+    transition: border-color .5s;
+}
+
+.menu li:hover{
+    border-color: #AF5151;
+}
