--- a/ds1m-b/lucasvinicius/css/formas.css
+++ b/ds1m-b/lucasvinicius/css/formas.css
@@ -8,7 +8,7 @@
     border: 3px solid #ffffff;
 }
 
-.quadrado {
+#quadrado {
     width: 110px;
     height: 25px;
     border: 3px solid gray;
@@ -27,5 +27,11 @@
 }
 
 #quadrado2 {
+    width: 110px;
+    height: 25px;
+    border: 3px solid gray;
+    background-color: gray;
+    text-align: center;
+    color: black;
     display: none;
 }
