--- a/ds1m-b/lucasvinicius/css/textoEImage.css
+++ b/ds1m-b/lucasvinicius/css/textoEImage.css
@@ -7,8 +7,7 @@
 .imagensBo2 {
     display: flex;
     flex-direction: column;
-    height: 900px;
-    justify-content: space-evenly;
+    gap: 140px;
     align-items: flex-end;
 }
 
