--- a/ds1t-a/one-page-doceria/css/about_us.css
+++ b/ds1t-a/one-page-doceria/css/about_us.css
@@ -1,16 +1,16 @@
 .about-us{
-    background-color: #E5E5E5;
     height: 120vh;
 }
 .subtitulo{
     font-size: 36px;
     font-family: 'Inter';
     font-style: normal;
-    color: rgba(0, 0, 0, 0.64);;
+    color: rgba(87, 81, 81, 0.64);
     text-align: center;
     margin-left: 279px;
     margin-right: 178px;
     margin-top: 68px;
+    
 }
 
 .img_loja {
