site versão desktop  finalizado e adição do Vlibras

--- a/ds1t-a/Alexssandro/css/cafes-variados.css
+++ b/ds1t-a/Alexssandro/css/cafes-variados.css
@@ -36,7 +36,7 @@
     display: flex;
     width: 600%;
     height: 848px;
-    transition: transform 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
     transform: translateX(0);
 }
 
