--- a/ds1t-a/Alexssandro/css/contato.css
+++ b/ds1t-a/Alexssandro/css/contato.css
@@ -108,3 +108,8 @@ form input::placeholder, form textarea::placeholder {
     font-size: 1.5rem;
     margin-top: 21px;
 }
+
+.btn-mensagem:hover {
+    background-color: var(--cor-marrom-escuro);
+    transition: 0.25s ease-in-out;
+}
